2009-05-12  Jan Michael Alonzo  <jmalonzo@webkit.org>

Reviewed by Holger Freyther.

        [Gtk] Various autotools build refactoring and fixes
        https://bugs.webkit.org/show_bug.cgi?id=25286

        Define WTF_USE_JSC for the Gtk port.

        * wtf/Platform.h:

Canonical link: https://commits.webkit.org/35541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43562 268f45cc-cd09-0410-ab3c-d52691b4dbfc